--- a/app/src/main/res/layout/quest_element.xml
+++ b/app/src/main/res/layout/quest_element.xml
@@ -17,10 +17,11 @@
         android:layout_height="match_parent"
         android:layout_toEndOf="@+id/quest_status_icon"
         android:orientation="vertical"
-        android:paddingRight="10dp"
-        android:paddingEnd="10dp">
+        android:paddingRight="10dp">
+
 
         <TextView
+            android:id="@+id/quest_string1"
             android:layout_width="match_parent"
             android:layout_height="35dp"
             android:gravity="center_vertical"
@@ -28,6 +29,7 @@
             android:text="String1"/>
 
         <TextView
+            android:id="@+id/quest_string2"
             android:layout_width="match_parent"
             android:layout_height="14dp"
             android:textSize="12sp"
@@ -35,6 +37,7 @@
             android:text="String2"/>
 
         <TextView
+            android:id="@+id/quest_string3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="12sp"
