--- a/app/src/main/res/layout/quest_element.xml
+++ b/app/src/main/res/layout/quest_element.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="70dp">
 
-    <ImageView
-        android:id="@+id/quest_status_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_done_black_24dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"/>
-
-    <LinearLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/quest_status_icon"
-        android:orientation="vertical"
-        android:paddingRight="10dp">
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/quest_status_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_done_black_24dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"/>
 
-        <TextView
-            android:id="@+id/quest_string1"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:gravity="center_vertical"
-            android:textSize="20sp"
-            android:text="String1"/>
-
-        <TextView
-            android:id="@+id/quest_string2"
-            android:layout_width="match_parent"
-            android:layout_height="14dp"
-            android:textSize="12sp"
-            android:gravity="center_vertical"
-            android:text="String2"/>
-
-        <TextView
-            android:id="@+id/quest_string3"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="12sp"
-            android:gravity="center_vertical"
-            android:text="Status" />
-
-    </LinearLayout>
+            android:layout_toEndOf="@+id/quest_status_icon"
+            android:orientation="vertical"
+            android:paddingRight="10dp">
 
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/quest_string1"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:gravity="center_vertical"
+                android:textSize="20sp"
+                android:text="String1"/>
+
+            <TextView
+                android:id="@+id/quest_string2"
+                android:layout_width="match_parent"
+                android:layout_height="14dp"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:text="String2"/>
+
+            <TextView
+                android:id="@+id/quest_string3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="12sp"
+                android:gravity="center_vertical"
+                android:text="Status" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+</FrameLayout>
