--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,36 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="beaconfound_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:text">@string/beacon_found</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingTop">10dp</item>
+    </style>
+
+    <style name="newquest_label">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:text">@string/newquest_label</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingTop">10dp</item>
+    </style>
+
+    <style name="newquest_description" parent="newquest_label">
+        <item name="android:textColor">@color/green_main</item>
+        <item name="android:text">@string/newquest_description_default</item>
+    </style>
+
+    <style name="newquest_ok_button">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:text">Got It</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingTop">30dp</item>
+    </style>
+
 </resources>
