Some hardcoded stuff

--- a/app/src/main/res/layout/fragment_profile_paged.xml
+++ b/app/src/main/res/layout/fragment_profile_paged.xml
@@ -33,16 +33,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="96dp"
                     android:gravity="bottom|center_horizontal"
-                    android:textSize="20sp"
-                    android:text="BIG TEXT"/>
+                    android:textSize="23sp"
+                    android:text="Ivaylo"/>
                 
                 <TextView
                     android:id="@+id/profile_appbar_smalltext"
                     android:layout_width="match_parent"
                     android:layout_height="32dp"
                     android:gravity="top|center_horizontal"
-                    android:textSize="12sp"
-                    android:text="SMALL TEXT"/>
+                    android:textSize="14sp"
+                    android:text="69 pts"/>
 
             </LinearLayout>
 
